feat: ready for game 6

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: Acronyms
+- name: Animation
 
 - name: Web Security
   sponsor: Clerk
 
-- name: APIs & SDKs
+- name: Acronyms
 
 - name: Dev Lore
   sponsor: Neon
